Adds support for alternate firstnames

--- a/Anonymizer/Anonymizer/Anonymizer.csproj
+++ b/Anonymizer/Anonymizer/Anonymizer.csproj
@@ -18,6 +18,9 @@
     <None Update="Data\gendered_words.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\variants.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="General.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
